# BaniC

./: CMakeLists.txt  README.md  grammar.txt
examples/: hello_world.b
include/: preprocessor.h  utils.h
include/data_structures/: hash_map.h
include/io/: log.h
src/: main.c  preprocessor.c  utils.c
src/data_structures/: hash_map.c
src/io/: log.c
